RESOLVED FIXED306307
Readonly date input can be edited via keyboard
https://bugs.webkit.org/show_bug.cgi?id=306307
Summary Readonly date input can be edited via keyboard
Luke Warlow
Reported 2026-01-26 17:01:45 PST
Load `data:text/html,<input type="date" readonly value="1970-01-01">` Tab to focus the first input component, press space to open the picker, press the down arrow to change the value for the day, press space to choose the new value, press escape to close the picker. You'll notice that this changes the value. Expected behaviour is that the picker isn't openable when in readonly mode, and no new value can be chosen.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-02 17:02:13 PST
Nipun Shukla
Comment 2 2026-02-19 20:30:59 PST
EWS
Comment 3 2026-02-20 12:05:28 PST
Committed 307934@main (4d6199e55419): <https://commits.webkit.org/307934@main> Reviewed commits have been landed. Closing PR #59056 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.