Cherry-pick 4d6199e55419. rdar://171535893

Readonly date input can be edited via keyboard
    https://bugs.webkit.org/show_bug.cgi?id=306307
    rdar://169488939

    Reviewed by Ryosuke Niwa.

    Fix readonly date input picker opening via space key by adding
    an isMutable() guard to didReceiveSpaceKeyFromControl(),
    matching the existing guards in handleDOMActivateEvent()
    and handleAccessibilityActivation().

    Test: fast/forms/date/date-editable-components/date-readonly-picker-does-not-open-on-space-keypress.html

    * LayoutTests/fast/forms/date/date-editable-components/date-readonly-picker-does-not-open-on-space-keypress-expected.txt: Added.
    * LayoutTests/fast/forms/date/date-editable-components/date-readonly-picker-does-not-open-on-space-keypress.html: Added.
    * Source/WebCore/html/BaseDateAndTimeInputType.cpp:
    (WebCore::BaseDateAndTimeInputType::didReceiveSpaceKeyFromControl):

    Canonical link: https://commits.webkit.org/307934@main

Identifier: 305413.401@safari-7624-branch